css/layout.css
.row {
	margin: 5px;
}

.box {
	-webkit-border-radius: 5px;
	-moz-border-radius: 5px;
	border-radius: 5px;
	padding: 0 0 10px 0
}




.box.red {
	border: 2px solid #A21111;
}

.box.red h3 {
	background-color: #A21111;
}

.box.green {
	border: 2px solid #28A528;
}

.box.green h3 {
	background-color: #28A528;
}

.box.blue {
	border: 2px solid #063186;
}

.box.blue h3 {
	background-color: #063186;
}

h3 {
	margin-top: 0px;
	color: white;
	text-shadow: 0 1px 0 #000;
}





.google-yellow {
	color: #EEB211;
}

.google-blue {
	color: #3369E8;
}

.google-green {
	color: #009925;
}

.google-red {
	color: #D50F25;
}

.block {
  	text-align: center;
}

.block:before {
  	content: '';
  	display: inline-block;
  	height: 100%;
  	vertical-align: middle;
  	margin-right: -0.25em; /* Adjusts for spacing */
}

.centered {
 	display: inline-block;
  	vertical-align: middle;
  	width: auto;
}

.logo {
	font-family: Catull;
    src: url(font/catull.ttf);
}

#small-logo {
    font-size: 26px;
}


#big-logo {
    font-family: Catull;
    src: url(font/catull.ttf);
    font-size: 72px;
}

#search-button {
	font-weight: bold;
}

.right {
	float: right;
}

.left {
	float: left;
}

.clear {
	float: none;
	clear: both;
}

.navbar {
	vertical-align: middle;
}

